--- a/CV Tarea en Github/index.html
+++ b/CV Tarea en Github/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5">
+    <meta name="description" content="Currículum Vitae de Carolina Silva Riet Correa">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <title>Curriculum Vitae</title>
 </head>
