--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/all.min.css" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/templatemo-style.css" />
-  <title>Mini Profile - Free Bootstrap CSS Template</title>
+  <title>Página Web - Carolina Silva Riet</title>
 </head>
 
 <body>
@@ -311,7 +311,6 @@
       setBrandMarginTop();
       detectMsBrowser();
 
-      // Handle window resize event
       $(window).resize(function () {
         setBrandMarginTop();
       });
